# QVKeyboard

./: CMakeLists.txt  LICENSE  README.md
TestKeyboard/: CMakeLists.txt
pinyin/: CMakeLists.txt
qt5softkeyboard/: CMakeLists.txt  KeyboardContainer.cpp  KeyboardContainer.h
